Fix css visibility regression

--- a/src/swiffy-slider.css
+++ b/src/swiffy-slider.css
@@ -438,7 +438,6 @@
     }
     .slider-nav-animation.slider-nav-animation-fadein .slider-container>*>* {
         opacity: 0.5;
-        visibility: hidden;
     }
     .slider-nav-animation.slider-nav-animation-scale .slider-container>*>* {
         transform: scale(.9);
@@ -468,7 +467,6 @@
     .slider-nav-animation .slider-container>*.slide-visible>* {
         opacity: 1;
         transform: none;
-        visibility: visible;
     }
 }
 
